initiate canvas dimensions before changing to jquery plugin

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,9 @@
 div.container{
 	width: 900px;
+	height: 500px;
 	margin: 0 auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 	h1{
 		text-align: center;
 	}
