--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,15 +1,24 @@
-div.container{
-	width: 900px;
-	height: 500px;
-	margin: 0 auto;
-	overflow-y: auto;
-	overflow-x: hidden;
-	h1{
-		text-align: center;
-	}
-	p{
-		font-size: 1.2em;
-		text-align: justify;
+div.upcontainer{
+	position: absolute;
+	left: 15px;
+	top: 15px;
+	width: 800px;
+	height: 800px;
+	div.container{
+		position: absolute;
+		left: 150px;
+		top: 150px;
+		width: 500px;
+		height: 500px;
+		margin: 0 auto;
+		overflow-y: auto;
+		overflow-x: hidden;
+		h1{
+			text-align: center;
+		}
+		p{
+			font-size: 1.2em;
+			text-align: justify;
+		}
 	}
 }
-
