--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,28 +1,31 @@
 body {
 	margin: 50px;
-    div.upcontainer {
-        // position: absolute;
-        left: 15px;
-        top: 15px;
-        width: 800px;
-        height: 800px;
-        div.container {
-            position: absolute;
-            left: 150px;
-            top: 150px;
-            width: 500px;
-            height: 500px;
-            // margin: 0 auto;
-            margin: 20px;
-            overflow-y: auto;
-            overflow-x: hidden;
-            h1 {
-                text-align: center;
-            }
-            p {
-                font-size: 1.2em;
-                text-align: justify;
-            }
-        }
-    }
+	div.upcontainer {
+		// position: absolute;
+		left: 15px;
+		top: 15px;
+		width: 800px;
+		height: 800px;
+		div.row{
+			margin: 30px 0;
+		}
+		div.container {
+			position: absolute;
+			left: 150px;
+			top: 150px;
+			width: 500px;
+			height: 500px;
+			// margin: 0 auto;
+			margin: 20px;
+			overflow-y: auto;
+			overflow-x: hidden;
+			h1 {
+				text-align: center;
+			}
+			p {
+				font-size: 1.2em;
+				text-align: justify;
+			}
+		}
+	}
 }
