--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,10 +4,19 @@ body {
 		// position: absolute;
 		left: 15px;
 		top: 15px;
-		width: 800px;
+		width: 100%;
 		height: 800px;
 		div.row{
 			margin: 30px 0;
+			div.btn-group{
+				button{
+					width: 50%;
+					span{
+						margin-right: 10px;
+						vertical-align: text-top;
+					}
+				}
+			}
 		}
 		div.container {
 			position: absolute;
