--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,18 +2,21 @@ body {
 	margin: 50px;
 	div.upcontainer {
 		// position: absolute;
-		left: 15px;
-		top: 15px;
+		// left: 15px;
+		// top: 15px;
 		width: 100%;
 		height: 800px;
 		div.row{
 			margin: 30px 0;
-			div.btn-group{
-				button{
-					width: 50%;
-					span{
-						margin-right: 10px;
-						vertical-align: text-top;
+			>div{
+				margin: 10px 0;
+				div.btn-group{
+					button{
+						width: 50%;
+						span{
+							margin-right: 10px;
+							vertical-align: text-top;
+						}
 					}
 				}
 			}
@@ -24,7 +27,6 @@ body {
 			top: 150px;
 			width: 500px;
 			height: 500px;
-			// margin: 0 auto;
 			margin: 20px;
 			overflow-y: auto;
 			overflow-x: hidden;
