start active class canvas + fix scroll issue

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@ body {
 				margin: 10px 0;
 				div.btn-group{
 					button{
+//						font-size: 1em;
 						width: 50%;
 						span{
 							margin-right: 10px;
@@ -21,7 +22,7 @@ body {
 				}
 			}
 		}
-		div.container {
+		div.textcontainer {
 			position: absolute;
 			left: 150px;
 			top: 150px;
