fix save load problem + active canvas wasn't fixed yet

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,7 +23,7 @@ body {
 			}
 		}
 		div.textcontainer {
-			position: absolute;
+			// position: absolute;
 			left: 150px;
 			top: 150px;
 			width: 500px;
